# python101

./: .coverage  README.md  pyproject.toml
docs/: example.ipynb
src/python101/: datasets.py  plotting.py  pycounts.py
src/python101/data/: flatland.txt
tests/: einstein.txt  test_pycounts.py
