[project]
name = "python101"
version = "0.1.0"
description = ""
authors = [
    {name = "ChuanqiMa",email = "chuanqima989@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy (<2.2.6)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (<3.10.3)"
]

[tool.poetry]
packages = [{include = "python101", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
