[project]
name = "python101"
version = "0.1.0"
description = ""
authors = [
    {name = "ChuanqiMa",email = "chuanqima989@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy (<2.2.6)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (<3.10.3)",
    "ipykernel (>=6.29.5,<7.0.0)"
]

[tool.poetry]
packages = [{include = "python101", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
